--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Minh Huy Nguye",
+  "preferGlobal": true,
+  "license": "Apache",
   "dependencies": {
     "colors": "^1.4.0",
     "request": "^2.88.2"
