--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "insane-cli.js",
+  "bin": {
+    "insane-cli": "insane-cli.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Minh Huy Nguye",
-  "preferGlobal": true,
-  "license": "Apache",
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "colors": "^1.4.0",
     "request": "^2.88.2"
